<resources>
    <string name="app_name">DiscBit</string>
    <string name="no_devices_text">No devices.</string>
    <string name="bluetooth_disabled">Enable bluetooth to scan for devices.</string>
    <string name="scanning">Scanning...</string>
    <string name="scan">Scan</string>
    <string name="device_name">(%s)</string>
    <string name="rssi">rssi: </string>
    <string name="connecting">Connecting</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="calculated">Calculated</string>
</resources>
